<resources>

    <!--===========================-->
    <!-- Activity Specific Strings -->
    <!--===========================-->

    <!-- Main Activity Strings -->
    <string name="main_btn_start">Start Solving</string>
    <string name="main_button_preferences">Preferences</string>

    <!-- Preferences Strings -->
    <string name="preferences_activity_title">SolveCubed Preferences</string>

    <!-- Palette Picker Strings -->
    <string name="palette_picker_activity_title">Palette Picker</string>
    <string name="palette_picker_probe_content_description">The palette picker overlay on top of the camera.</string>
    <string name="palette_picker_indicator_actual_content_description">The color of the object that you\'re pointing the camera at.</string>
    <string name="palette_picker_indicator_reference_content_description">The color that you should match to your real Rubik\'s cube.</string>
    <string name="palette_picker_help">Place the color picker over your Rubick\'s cube squares to calibrate the camera. The selected square can be seen on the right hand side of the screen.</string>
    <string name="palette_picker_hash_map">PalettePickerHashMap</string>

    <!-- Palette Confirmation Strings -->
    <string name="palette_confirmation_activity_title">Confirm Color Palette</string>
    <string name="palette_confirmation_help">Confirm if these are the correct colours that you\'ve calibrated with your Rubik\'s cube.</string>

    <!-- Cube Input Strings -->
    <string name="cube_input_activity_title">Configure Cube</string>
    <string name="cube_input_help">Place your Rubick\'s cube in the grid and press the capture button to configure the Rubick\'s cube.</string>
    <string name="cube_input_cube_data" translatable="false">RubiksCubeStoredData</string>

    <!-- Cube Confirmation Strings -->
    <string name="cube_confirmation_activity_title">Confirm Cube Configuration</string>
    <string name="cube_confirmation_help">Confirm if this cube foldout matches your Rubick\'s cube configuration.</string>

    <!-- Cube Solver Strings -->
    <string name="cube_solver_activity_title">Rubik\'s Cube Solver</string>
    <string name="cube_solver_help">Follow the steps to solve your Rubick\'s cube.</string>

    <!--================-->
    <!-- Config Strings -->
    <!--================-->

    <!-- General App Strings -->
    <string name="app_title" translatable="false">SolveCubed</string>
    <string name="app_title_superscript" translatable="false">Solve³</string>
    <string name="app_description">Rubik\'s Cube Solver</string>

    <!-- Menu Strings -->
    <string name="menu_action_placeholder">This action has not been implemented!</string>
    <string name="menu_action_help_name">Help</string>

    <!-- Button Strings -->
    <string name="btn_cancel">Cancel</string>
    <string name="btn_return_to_main_menu">Return to Main Menu</string>
    <string name="btn_open_app_settings">Open App Settings</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>

    <!-- Error Strings -->
    <string name="err_security_permissions">Security Permissions Error</string>
    <string name="err_security_permissions_desc">Please ensure app permissions are enabled and then restart the application.</string>
    <string name="err_misconfigured_cube">Misconfigured Cube Error</string>
    <string name="err_misconfigured_cube_desc">The captured cube is not valid. Please try capturing the cube again.</string>

    <!-- Preferences Strings -->
    <string name="pref_master_key" translatable="false">solve_cubed_preferences</string>

    <string name="pref_splash_enabled_key" translatable="false">is_splash_enabled</string>
    <string name="pref_splash_enabled_title">Enable Splash Screen</string>
    <string name="pref_splash_enabled_desc">Display splash screen for 5 seconds</string>

    <string name="pref_text_speech_enabled_key" translatable="false">is_text_speech_enabled</string>
    <string name="pref_text_speech_enabled_title">Enable Text-to-Speech</string>
    <string name="pref_text_speech_enabled_desc">Enable speech accessibility for help menu</string>

    <!-- Literal Color Names -->
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_orange">Orange</string>
    <string name="color_white">White</string>
    <string name="palette_confirmation_activity_title">Confirm Color Palette</string>
    <string name="btn_okay">Okay</string>
    <string name="btn_okay">Okay</string>

</resources>
