<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <ImageView
                    style="@style/StandardTheme.Icon"
                    android:id="@+id/palette_confirmation_image_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_circle_100dp"
                    android:tint="@color/rubiks_red" />

                <TextView
                    android:text="@string/color_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/palette_confirmation_image_red"
                    android:layout_marginStart="12dp"
                    android:layout_centerVertical="true"
                    android:textSize="24sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <ImageView
                    style="@style/StandardTheme.Icon"
                    android:id="@+id/palette_confirmation_image_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_circle_100dp"
                    android:tint="@color/rubiks_green"/>

                <TextView
                    android:text="@string/color_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/palette_confirmation_image_green"
                    android:layout_marginStart="12dp"
                    android:layout_centerVertical="true"
                    android:textSize="24sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <ImageView
                    style="@style/StandardTheme.Icon"
                    android:id="@+id/palette_confirmation_image_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_circle_100dp"
                    android:tint="@color/rubiks_blue"/>

                <TextView
                    android:text="@string/color_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/palette_confirmation_image_blue"
                    android:layout_marginStart="12dp"
                    android:layout_centerVertical="true"
                    android:textSize="24sp"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <ImageView
                    style="@style/StandardTheme.Icon"
                    android:id="@+id/palette_confirmation_image_yellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_circle_100dp"
                    android:tint="@color/rubiks_yellow"/>

                <TextView
                    android:text="@string/color_yellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/palette_confirmation_image_yellow"
                    android:layout_marginStart="12dp"
                    android:layout_centerVertical="true"
                    android:textSize="24sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <ImageView
                    style="@style/StandardTheme.Icon"
                    android:id="@+id/palette_confirmation_image_orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_circle_100dp"
                    android:tint="@color/rubiks_orange"/>

                <TextView
                    android:text="@string/color_orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/palette_confirmation_image_orange"
                    android:layout_marginStart="12dp"
                    android:layout_centerVertical="true"
                    android:textSize="24sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <ImageView
                    style="@style/StandardTheme.Icon"
                    android:id="@+id/palette_confirmation_image_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_circle_100dp"
                    android:tint="@color/rubiks_white"/>

                <TextView
                    android:text="@string/color_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/palette_confirmation_image_white"
                    android:layout_marginStart="12dp"
                    android:layout_centerVertical="true"
                    android:textSize="24sp"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <Button
            style="@style/StandardTheme.Button"
            android:id="@+id/palette_confirmation_btn_cancel"
            android:text="@string/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"/>

        <Button
            style="@style/StandardTheme.Button"
            android:id="@+id/palette_confirmation_btn_confirm"
            android:text="@string/btn_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</RelativeLayout>
